# selfSync

./: .gitignore  .readthedocs.yaml  404.html  Pipfile  README.md  app.py  database.db  extra.css  index.html  mkdocs.yaml  piplock2pipfile.py  pyproject.toml  requirements.txt  search.html  test.py
01_network/网络基础/: index.html
02_linux/linux使用和维护/: index.html
03_python/00_python编程/: index.html
03_python/01_python数据操作/: index.html
03_python/02_python编程模式/: index.html
03_python/03_python数据结构/: index.html
03_python/04_python算法/: index.html
03_python/05_常用内置库/: index.html
03_python/06_常用三方库/: index.html
03_python/python编程/: index.html
03_python/数据结构和算法/: index.html
05_database/mongodb必知必会/: index.html
05_database/mysql必知必会/: index.html
05_database/redis必知必会/: index.html
07_web/01_web开发/: index.html
07_web/02_flask/: index.html
08_blog/工作笔记/: index.html
09_books/控糖革命/: index.html
09_books/编写可读代码的艺术/: index.html
code/敏捷技能修炼/: index.html
codes/numpy/: numpy_01.py  numpy_03.py  numpy_04.py  numpy_05.py
docs/06_ai/: 00_算法.md  (+2 more)
docsAI/: CLEAN_PYTHON_AND_SETUP_UV.md  FIX_PYENV_REMOVAL.md  PYTHON_VERSION_MANAGEMENT.md  UV_MIGRATION.md
fastapi/: __init__.py  db.py  depends.py  fakedb.py  main.py  models.py  schemas.py  tools.py
flask/: __init__.py
my_numpy/: numpy_02.py  numpy_06.py
my_python/: p_1.py  p_2.py  p_3.py
mytools/: __init__.py  fetch_html.py  gen_pdf.py
search/: search_index.json
shells/: clean_python.sh  remove_pyenv.sh  setup_usb_drive.sh
templates/: upload.html
tools/: convert_chatgpt_export_to_md.py  hash_pw.py
(+46 files in other folders)
